@@ -1,3 +1,8 @@
+[B]Version 1.0.3[/B]
+
+- Changed the default video quality to Quicktime HD
+- Cleaned up code and settings
+
 [B]Version 1.0.2[/B]
 
 - Updated icon
